--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "discord.js": "^14.16.3",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "mongoose": "^8.9.5",
