--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
     "emailjs-com": "^3.2.0",
+    "js-cookie": "^3.0.5",
     "notistack": "^3.0.1",
     "popper": "^1.0.1",
     "react": "^18.3.1",
