--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "discord.js": "^14.16.3",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
