--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
+    "crypto-js": "^4.2.0",
     "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.5",
     "notistack": "^3.0.1",
