--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "mongoose": "^8.9.5",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
