--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "smooth-scroll": "^16.1.3",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.14",
     "web-vitals": "^2.1.4"
   },
