--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
     "@mui/x-data-grid": "^7.23.5",
@@ -15,15 +16,20 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
+    "currency-codes": "^2.2.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.4.7",
+    "html-react-parser": "^5.2.2",
+    "html2pdf.js": "^0.10.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
-    "notistack": "^3.0.1",
+    "notistack": "^3.0.2",
     "popper": "^1.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
