resume ranker added prototypev1

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "currency-codes": "^2.2.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
+    "fs": "^0.0.1-security",
     "html-react-parser": "^5.2.2",
-    "html2pdf.js": "^0.10.2",
+    "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "notistack": "^3.0.2",
     "popper": "^1.0.1",
