--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.3",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
     "socket.io-client": "^4.8.1",
