--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,9 +32,11 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-organizational-chart": "^2.2.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.1",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
