--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.475.0",
     "notistack": "^3.0.2",
     "popper": "^1.0.1",
+    "quill-mention": "^6.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-calendar": "^5.1.0",
