--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,12 +28,14 @@
     "lucide-react": "^0.475.0",
     "notistack": "^3.0.2",
     "popper": "^1.0.1",
+    "primereact": "^10.9.3",
     "quill-mention": "^6.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-organizational-chart": "^2.2.1",
     "react-quill": "^2.0.0",
